# exodus

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml  settings.toml.example
docker/: README.md
docker/exodus_security_executor/: Dockerfile  entrypoint.sh
exodus/: __init__.py  agent_engine.py  logs.py  main.py  settings.py
exodus/agents/single/: agent.toml.example  recon_agent.toml  triage_agent.toml
exodus/cli/: __init__.py  app.py  commands.py  display.py  session.py
exodus/core/: decorators.py
exodus/core/memory/: local_json_memory.py
exodus/core/models/: agent.py  events.py  llm.py  memory.py  tool.py
exodus/core/providers/: litellm.py
exodus/core/registries/: __init__.py  agent_registry.py  tool_registry.py
exodus/core/tools/: plugin.py  tool_executor.py
exodus/core/tools/drivers/: docker_executor_driver.py  local_executor_driver.py
exodus/server/: exodus_client_cli.py  exodus_executor.py  exodus_executor_client.py
tests/core/memory/: test_local_memory.py
tests/core/models/: test_agent_loading.py
tests/core/registries/: test_agent_registry.py
tests/core/tools/: test_tool_execution.py
